--- a/html/builder.html
+++ b/html/builder.html
@@ -15,7 +15,7 @@ Minimum bin width: <input id="minbin"></input><br/>
 URL: <a id="url" href=""></a><br/>
 
 <script>
-var baseURL = 'http://visualize.ci-connect.net/iv/jobchart.html'; //?brand=osg&groupby=user&rel=submitted&start=Sep+1+2014&hours=48
+var baseURL = 'http://visualize.ci-connect.net/crow/jobchart.html'; //?brand=osg&groupby=user&rel=submitted&start=Sep+1+2014&hours=48
 
 var params = {
 	pool: ['osg'],
