pass user, project to middleware

--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -60,6 +60,8 @@
 		hours: [48, parseInt],
 		minbin: [10, parseInt],
 		pool: ['osg', String],
+		project: ['all', String],
+		user: ['all', String],
 		groupby: ['ProjectName', String],
 		rel: ['default', String],
 		start: ['default', String],
@@ -126,8 +128,8 @@
 			type: "POST",
 			url: "/service/mongo-crow/starts",
 			data: JSON.stringify({
-				"project": "all",
-				"user": "all",
+				"project": params.project,
+				"user": params.user,
 				"task": "all",
 				"hours": params.hours,
 				"pool": params.pool,
