--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -30,14 +30,14 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background-color: #000;
+	background-color: #111;
 	z-index: -10;
 }
 #moon {
 	margin: auto;
 	position: absolute;
 	display: block;
-	background-color: #eee;
+	background-color: #dee;
 	top: 0;
 	left: 50%;
 	transform: translateX(-50%);
