--- a/html/builder.html
+++ b/html/builder.html
@@ -9,6 +9,7 @@ body {
 	font-family: "HelveticaNeueBlack", "HelveticaNeue-Black", "Helvetica Neue Black", "HelveticaNeueHeavy", "HelveticaNeue-Heavy", "Helvetica Neue Heavy", "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Arial Black", sans-serif;
 	background-color: #111;
 	color: #ddd;
+	overflow: hidden;
 }
 a {
 	color: #ccf;
