split css and js from jobchart.html

--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -18,84 +18,12 @@
 
 	<script src="//code.highcharts.com/highcharts.js"></script>
 	<!-- script src="//code.highcharts.com/modules/exporting.js" -->
+
+	<link rel="stylesheet" type="text/css" href="crow.css">
 </head>
 <body>
-<style>
-#idGraphSpace {
-	margin: auto;
-}
-#flying {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background-color: #111;
-	z-index: -10;
-}
-#moon {
-	margin: auto;
-	position: absolute;
-	display: block;
-	background-color: #dee;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 220px;
-	height: 220px;
-	border-radius: 110px;
-	z-index: -5;
-}
-#flying img {
-	margin: auto;
-	display: block;
-	z-index: 10 !important;
-	max-width: 220px;
-	max-height: 220px;
-}
-#flying img.failed {
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	top: 90px;
-	left: 50%;
-	transform: scaleY(-1) translateX(-50%);
-}
-p.credit a {
-	color: #ccf;
-}
-#flying p.credit {
-	color: #eee;
-	position: absolute;
-	bottom: 0;
-	margin-left: 3em;
-	margin-right: auto;
-	font-size: 50%;
-}
-#flying div.status {
-	font-family: "HelveticaNeueBlack", "HelveticaNeue-Black", "Helvetica Neue Black", "HelveticaNeueHeavy", "HelveticaNeue-Heavy", "Helvetica Neue Heavy", "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Arial Black", sans-serif;
-	font-weight: 000;
-	font-stretch: normal;
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-#flying span.name {
-	color: #444;
-	font-size: 100%;
-	line-height: 100%;
-	padding: 0;
-}
-#flying span.status {
-	color: #888;
-	font-size: 200%;
-	line-height: 100%;
-	padding: 0;
-}
-</style>
 
+<!-- Loading/status area -->
 <div id="flying">
 	<div id="moon"></div>
 	<img src="flying.gif"></img>
@@ -106,151 +34,10 @@ p.credit a {
 	</div>
 	<p class="credit">Flying raven by <a href="http://jesseth.deviantart.com/">Jessie Mollodovsky</a></p>
 </div>
-<div id="idGraphSpace"></div>
 
-<script>
-	var uri = URI(window.location.href);
-	var query = uri.query(true);
-
-	var params = {
-		width: [$(window).width() - 50, parseInt], //800,
-		height: [$(window).height() - 50, parseInt], //600,
-		hours: [48, parseInt],
-		minbin: [10, parseInt],
-		pool: ['osg', String],
-		project: ['all', String],
-		user: ['all', String],
-		groupby: ['ProjectName', String],
-		rel: ['default', String],
-		start: ['default', String],
-		end: ['default', String],
-	};
-
-	var groupings = {
-		'project': 'ProjectName',
-		'user': 'Owner',
-	};
-
-	for (var key in params) {
-		if (key in query) {
-			params[key] = params[key][1](query[key]);
-		}
-		else {
-			params[key] = params[key][0];
-		}
-	}
-
-	function load() {
-		$('#idGraphSpace').css({width: params.width, height: params.height});
-
-		/* Start with one bin per hour */
-		bins = params.hours;
-		millis = 3600 * 1000;
-
-		/* Bin width is chartwidth/bins.  If this is too small, then make fewer bins */
-		while (params.width / bins < params.minbin) {
-			bins /= 2;
-			millis *= 2;
-		}
-
-		yLabels = {
-			running: 'Jobs Running',
-			started: 'Jobs Started',
-			finished: 'Jobs Completed',
-			queued: 'Jobs Enqueued',
-		}
-
-		var options = {
-				chart: {
-					renderTo: 'idGraphSpace',
-					zoomType: 'xy',
-					type: 'column',
-					//margin: [ 60, 30, 45, 70 ],
-					width: params.width,
-					height: params.height
-				},
-				plotOptions: { column: {
-					stacking: 'normal',
-					pointPadding: 0.0,
-					groupPadding: 0,
-					pointInterval: millis,	/* how many millis per data point/bin */
-				} },
-				title: { text: '' },
-				xAxis: { type: 'datetime', tickWidth: 0, gridLineWidth: 1, /* title: { text: 'Date' } */ },
-				yAxis: { title: { text: yLabels[params.rel] } },
-				legend: { align: 'left', verticalAlign: 'top', y: 10, floating: true, borderWidth: 0 },
-				//exporting: {	   buttons: { contextButton: {	text: 'Export' } }, sourceHeight:1050, sourceWidth: 1485	},
-				credits: { enabled: false },
-				tooltip: { formatter: function() {
-					return ('<b>' + this.series.name + '</b><br/>' +
-						Highcharts.dateFormat('%a %d %b %Y, %H:%M', this.x) + ' UTC<br/>' +
-						'Jobs: ' + this.y)
-				} }
-		}; 
-
-		var failtimer = setTimeout(function () {
-			$('#flying img').attr('src', 'standing.png').addClass('failed');
-			$('#moon').css('background-color', '#c00');
-			$('span.status').html('has failed. probably.');
-		}, 45000);
-
-		// why? $.ajaxSetup({async: false});
-		$.ajax({
-			type: "POST",
-			url: "/service/mongo-crow/starts",
-			data: JSON.stringify({
-				"project": params.project,
-				"user": params.user,
-				"task": "all",
-				"hours": params.hours,
-				"pool": params.pool,
-				"groupby": groupings[params.groupby],
-				"bins": bins,
-				"width": params.width,
-				"rel": params.rel,
-				"start": params.start,
-				"end": params.end,
-			}),
-			contentType: "application/json; charset=utf-8",
-			dataType: "json",
-			success: function(data) {
-				clearTimeout(failtimer);
-				$('#idGraphSpace').show();
-				options.series = data.plot;
-				chart = new Highcharts.Chart(options); 
-				$('#flying').remove();
-			},
-			failure: function(errMsg) {
-				alert(errMsg);
-				$('#idGraphSpace').show();
-			}
-		});
-	}
-
-	$(document).ready(function() {
-		$('#idGraphSpace').hide();
-
-		// get title elements
-		var name = $('.name');
-		var status = $('span.status');
-
-		// get ratio of name's width to font size
-		name.css('font-size', '200%');
-		var r = name.width() / 200.0;
-
-		// compute ratio of status's width to that ratio
-		var sz = status.width() / r;
-		// and set the f-s to that value
-		name.css('font-size', '' + sz + '%');
-
-		// do it again for fine adjustments
-		var r = name.width() / sz;
-		var sz = status.width() / r;
-		name.css('font-size', '' + sz + '%');
-
-		load();
-	});
-</script>
+<!-- Plot -->
+<div id="crowgraph"></div>
+<script src="jobchart.js"></script>
 
 </body>
 </html>
