--- a/html/builder.html
+++ b/html/builder.html
@@ -66,7 +66,7 @@ var params = {
 	width: null,
 	height: null,
 	start: null,
-	end: 'now',
+	end: null,
 	hours: 72,
 	minbin: null,
 };
@@ -112,7 +112,7 @@ function init() {
 					.text(value));
 			}
 		}
-		node.change(update);
+		node.keyup(update);
 	}
 	update();
 }
