label axes correctly

--- a/html/builder.html
+++ b/html/builder.html
@@ -70,7 +70,7 @@ URL: <a id="url" href=""></a><br/>
 var baseURL = 'http://visualize.ci-connect.net/crow/jobchart.html'; //?brand=osg&groupby=user&rel=submitted&start=Sep+1+2014&hours=48
 
 var params = {
-	pool: ['osg'],
+	pool: ['osg', 'atlas', 'duke', 'uchicago', 'cms', 'umich'],
 	groupby: ['user', 'project'],
 	rel: ['running', 'submitted', 'started', 'finished'],
 	width: null,
