Add daytime crow, rename old crow to midnight.
Choice between daytime and midnight is governed by this line in
jobchart.html:

<!-- Loading/status area -->
<!-- set class="daytime" for daytime crow, class="midnight" for midnight crow -->
<div id="flying" class="midnight">
...

--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -29,7 +29,8 @@
 <body>
 
 <!-- Loading/status area -->
-<div id="flying">
+<!-- set class="daytime" for daytime crow, class="midnight" for midnight crow -->
+<div id="flying" class="midnight">
 	<div id="moon"></div>
 	<img src="flying.gif"></img>
 	<div class="status">
