change to daytime crow

--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -30,7 +30,7 @@
 
 <!-- Loading/status area -->
 <!-- set class="daytime" for daytime crow, class="midnight" for midnight crow -->
-<div id="flying" class="midnight">
+<div id="flying" class="daytime">
 	<div id="moon"></div>
 	<img src="flying.gif"></img>
 	<div class="status">
