added daytime visual option (default) and some additional qparams

--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -32,6 +32,20 @@
 <!-- set class="daytime" for daytime crow, class="midnight" for midnight crow -->
 <div id="flying" class="daytime">
 	<div id="moon"></div>
+	<div class="clouds">
+		<div class="cloud">
+			<div class="cloud-bubble dummy"></div>
+			<div class="cloud-bubble"></div>
+			<div class="cloud-bubble"></div>
+			<div class="cloud-bubble"></div>
+		</div>
+		<div class="cloud">
+			<div class="cloud-bubble dummy"></div>
+			<div class="cloud-bubble"></div>
+			<div class="cloud-bubble"></div>
+			<div class="cloud-bubble"></div>
+		</div>
+	</div>
 	<img src="flying.gif"></img>
 	<div class="status">
 		<span class="name">crow</span>
