--- a/html/jobchart.html
+++ b/html/jobchart.html
@@ -62,7 +62,7 @@
     <div class="input"><select id="groupby"></select></div>
   </div>
   <div class="control">
-    <label for="rel">Relation:</label>
+    <label for="rel">History (job phase):</label>
     <div class="input"><select id="rel"></select></div>
   </div>
   <div class="control hidden">
@@ -74,7 +74,7 @@
     <div class="input"><input id="height"></input>  (defaults to window size)</div>
   </div>
   <div class="control">
-    <label for="hours">Hours:</label>
+    <label for="hours">Timeframe:</label>
     <div class="input"><select id="hours"></select></div>
   </div>
   <div class="control hidden">
@@ -83,7 +83,7 @@
   </div>
   <div class="control">
     <label for="submit">&nbsp;</label>
-    <div class="input"><button id="submit" value="Revise Plot" onclick="reload();">Revise Plot</button></div>
+    <div class="input"><button id="submit" value="Update" onclick="reload();">Update</button></div>
   </div>
   <div class="control">
     <div class="input"><input id="moreopts" type="checkbox"/>&nbsp;More options</div>
